fix: enhance linebreak possibilities for legend on mobile

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1616,6 +1616,8 @@ select.bk-input:hover {
   width: 100%;
   --tw-translate-y: 0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  -webkit-hyphens: auto;
+          hyphens: auto;
   font-size: 0.75rem;
   line-height: 1rem;
 }
